// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductOverview component renders correctly with Recapcha 1`] = `
<div>
  <div
    class="ProductOverview"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-12 MuiGrid-grid-lg-8"
      >
        <div
          class="ImageGallery-module_ImageGallery__IY-1c"
        >
          <div
            class="ImageGallery-module_image-wrapper__O9qhN"
          >
            <div
              class="ImageGallery-module_caption__IGNKx"
            >
              <p
                class="MuiTypography-root ImageGallery-module_caption-text__oqSQ3 Typography-module_Typography__aA2Zb MuiTypography-h6"
              >
                <span
                  class="LinesEllipsis  Truncate-module_Truncate__BVmFW"
                >
                  caption
                  <wbr />
                </span>
              </p>
            </div>
          </div>
          <div
            class="ImageGallery-module_thumbnails__hJEUD"
          >
            <button
              class="MuiButtonBase-root ImageGallery-module_thumb-scroller__Oi-K- ImageGallery-module_thumb-scroller--left__QzW7b ThumbScrollerButton-module_ThumbScrollerButton__AmmLO ThumbScrollerButton-module_ThumbScrollerButton--left__YslS3"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root ThumbScrollerButton-module_icon__dw0Sg"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              class="MuiButtonBase-root ImageGallery-module_thumb-scroller__Oi-K- ImageGallery-module_thumb-scroller--right__Ze5Sy ImageGallery-module_thumb-scroller--hidden__GIXCG ThumbScrollerButton-module_ThumbScrollerButton__AmmLO ThumbScrollerButton-module_ThumbScrollerButton--right__0-QGE"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root ThumbScrollerButton-module_icon__dw0Sg"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <div
              class="ImageGallery-module_scroller__pD0qV"
              style="margin-right: 0%;"
            >
              <button
                class="MuiButtonBase-root ImageGallery-module_thumbnail__-eV18 Thumbnail-module_Thumbnail__8EKru Thumbnail-module_Thumbnail--selected__zPXWJ Thumbnail-module_Thumbnail--large__UGNHe"
                tabindex="0"
                type="button"
              />
              <button
                class="MuiButtonBase-root ImageGallery-module_thumbnail__-eV18 Thumbnail-module_Thumbnail__8EKru Thumbnail-module_Thumbnail--large__UGNHe"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-12 MuiGrid-grid-lg-4"
      >
        <div
          class="ProductOverviewPane-module_ProductOverview__WnqcK"
        >
          <h1
            class="MuiTypography-root ProductOverviewPane-module_heading__YvaLU Typography-module_Typography__aA2Zb MuiTypography-h3"
          >
            name
          </h1>
          <ul
            class="ProductOverviewPane-module_attributes__nM8bL"
          />
          <div>
            block
          </div>
          <p>
            text
          </p>
        </div>
        <p
          class="MuiTypography-root keyAssetTypesDownload Typography-module_Typography__aA2Zb MuiTypography-body1"
        >
          This site is protected by reCAPTCHA and the Google 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
            href="https://policies.google.com/privacy"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Privacy Policy
            </span>
          </a>
           and 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-module_Anchorlink__OMERU MuiTypography-colorPrimary"
            href="https://policies.google.com/terms"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Terms of Service
            </span>
          </a>
           apply.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductOverview component renders correctly without Recapcha 1`] = `
<div>
  <div
    class="ProductOverview"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-12 MuiGrid-grid-lg-8"
      >
        <div
          class="ImageGallery-module_ImageGallery__IY-1c"
        >
          <div
            class="ImageGallery-module_image-wrapper__O9qhN"
          >
            <div
              class="ImageGallery-module_caption__IGNKx"
            >
              <p
                class="MuiTypography-root ImageGallery-module_caption-text__oqSQ3 Typography-module_Typography__aA2Zb MuiTypography-h6"
              >
                <span
                  class="LinesEllipsis  Truncate-module_Truncate__BVmFW"
                >
                  caption
                  <wbr />
                </span>
              </p>
            </div>
          </div>
          <div
            class="ImageGallery-module_thumbnails__hJEUD"
          >
            <button
              class="MuiButtonBase-root ImageGallery-module_thumb-scroller__Oi-K- ImageGallery-module_thumb-scroller--left__QzW7b ThumbScrollerButton-module_ThumbScrollerButton__AmmLO ThumbScrollerButton-module_ThumbScrollerButton--left__YslS3"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root ThumbScrollerButton-module_icon__dw0Sg"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              class="MuiButtonBase-root ImageGallery-module_thumb-scroller__Oi-K- ImageGallery-module_thumb-scroller--right__Ze5Sy ImageGallery-module_thumb-scroller--hidden__GIXCG ThumbScrollerButton-module_ThumbScrollerButton__AmmLO ThumbScrollerButton-module_ThumbScrollerButton--right__0-QGE"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root ThumbScrollerButton-module_icon__dw0Sg"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <div
              class="ImageGallery-module_scroller__pD0qV"
              style="margin-right: 0%;"
            >
              <button
                class="MuiButtonBase-root ImageGallery-module_thumbnail__-eV18 Thumbnail-module_Thumbnail__8EKru Thumbnail-module_Thumbnail--selected__zPXWJ Thumbnail-module_Thumbnail--large__UGNHe"
                tabindex="0"
                type="button"
              />
              <button
                class="MuiButtonBase-root ImageGallery-module_thumbnail__-eV18 Thumbnail-module_Thumbnail__8EKru Thumbnail-module_Thumbnail--large__UGNHe"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-12 MuiGrid-grid-lg-4"
      >
        <div
          class="ProductOverviewPane-module_ProductOverview__WnqcK"
        >
          <h1
            class="MuiTypography-root ProductOverviewPane-module_heading__YvaLU Typography-module_Typography__aA2Zb MuiTypography-h3"
          >
            name
          </h1>
          <ul
            class="ProductOverviewPane-module_attributes__nM8bL"
          />
          <div>
            block
          </div>
          <p>
            text
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
